fix: control bar and custom toast alignment fix

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -16,9 +16,7 @@ body {
 .\lk-prejoin {
   height: auto !important;
 }
-.\lk-control-bar {
-  z-index: 1400;
-}
+
 @media screen and (max-width: 760px) {
   .\lk-control-bar {
     .\lk-button,
@@ -88,9 +86,36 @@ body {
 .lk-focus-remove-button:hover {
   opacity: 1;
 }
-.participant-modal {
+.lk-chat {
   align-items: unset !important;
+  height: 88vh !important;
+  margin-top: 8px;
+  border-radius: 10px;
   .participant-title {
     text-transform: capitalize;
   }
+}
+.lk-grid-layout-wrapper, .lk-focus-layout-wrapper {
+  // display: flex !important;
+  height: 90vh !important;
+  // width: 100vw !important;
+}
+// .lk-grid-layout, .lk-focus-layout {
+//   padding-bottom: 0px !important;
+// }
+.lk-controls {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.\lk-control-bar {
+  z-index: 1400;
+  position: absolute;
+  top: 95%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  border-top: unset;
+  // background: #000000;
 }
